# TrainFlow-AI

./: .gcloudignore  .gitignore  CODEOWNERS  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: m0-prs-and-exit-checklist.md  m0-walking-skeleton-plan.md  m1-prs-and-exit-checklist.md  roadmap-trainflow.md  workload-identity-quick-setup.md  workload-identity-setup.md  zwift_workout_file_tag_reference.md
repo-template/: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEMPLATE_GUIDE.md  TEMPLATE_SUMMARY.md  cloudbuild.yaml  pyproject.toml
repo-template/.github/workflows/: ci.yml
repo-template/scripts/: deploy_cloud_run.sh  test_docker.sh
repo-template/src/{{PACKAGE_NAME}}/: __init__.py  main.py
repo-template/tests/: test_example.py
scripts/: deploy_cloud_run.sh  setup_cloudbuild_logs.sh  setup_workload_identity.sh  setup_workload_identity_v2.sh  test_docker.sh
src/trainflow_ai/: __init__.py  chainlit_app.py  coach.py  coach_graph.py  logging_utils.py  zwo_parser.py  zwo_writer.py
src/trainflow_ai/fit/: __init__.py  fit_parser.py  fit_writer.py
src/trainflow_ai/zwo/: __init__.py  zwo_model.py  zwo_parser.py  zwo_writer.py
tests/: __init__.py  test_chainlit_app.py  test_coach.py  test_coach_graph.py  test_fit_wrappers.py  test_logging_utils.py  test_zwo_parser.py  test_zwo_writer.py
tests/sample_files/: sample_program.zwo  sample_program_2.zwo  sample_program_3.zwo  sample_recording_2.FIT  sample_recording_3.FIT
