[tool.poetry]
name = "trainflow-ai"
version = "0.1.0"
description = "AI based endurance coach assistant"
authors = ["Marco Trincavelli <trinchetto@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "trainflow_ai", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^1.0.1"
langchain-openai = "^0.2.0"
chainlit = "^1.1.401"
pydantic = ">=2.7,<2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^4.4.0"
ruff = "^0.6.4"
mypy = "^1.11.1"
pytest-cov = ">=5.0"
coverage-badge = ">=1.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PL"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["langgraph.*", "pytest", "chainlit", "langchain_openai.*"]
ignore_missing_imports = true
