[tool.poetry]
name = "trainflow-ai"
version = "0.1.0"
description = "AI based endurance coach assistant"
authors = ["Marco Trincavelli <trinchetto@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "trainflow_ai", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^1.0.4"
langchain-openai = "^1.1.0"
chainlit = "^2.9.2"
pydantic = ">=2.7,<2.13"
fit-tool = "^0.9.13"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pre-commit = "^4.4.0"
ruff = "^0.14.8"
mypy = "^1.11.1"
pytest-cov = ">=5.0"
coverage-badge = ">=1.1"
matplotlib = "^3.10.7"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-n auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PL"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["langgraph.*", "chainlit", "langchain_openai.*", "pytest"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy",
    "fit_tool.*",
    "fit_tool.profile.messages.record_message",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disable_error_code = ["misc"]
allow_untyped_decorators = true
